@@ -7,6 +7,7 @@
 	hash_update_dup() in all files but pmksetup.c (check soon).
  * commented some code in autoconf.c which seems to be specific to
 	dillo but not to autoconf.
+ * made consistent use of boolean string values.
 
 28 Dec 2003 mipsator
  * added check_lang_comp() into functool to get lang info via compiler.
